--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="box">
 			<div class="headline">
-				<a href="#">Lubin Fan's Homepage</a>
+				<a href="#">Chao Feng's Homepage</a>
 			</div>
 			<!--导航-->
 			<div class="container">
