--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="google-site-verification" content="LGzvyo-I_edmJHT2pkFV89e_GnVg6UgsqaZ88BwGxrw" />
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content=" IE=9;IE=8;IE=7;IE=EDGE">
-		<title>Lubin Fan's Homepage</title>
+		<title>Chao Feng's Homepage</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" href="css/home.css?t=1.0.2" />
 	</head>
