--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="main-content">
 					<h1 class="layout-tile">
 			  	<font>
-			  		  Lubin Fan &nbsp; &nbsp;   - &nbsp; &nbsp;     樊鲁斌
+			  		  Chao Feng &nbsp; &nbsp;   - &nbsp; &nbsp;     冯超
 			  	</font>
 			  </h1>
 
