--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 						<img src="images/index/portrait-h172.png" />
 						<div class="layout-content-right">
 							<span class="font-min">
-			   			Senior Algorithm Engineer
+			   			Algorithm Engineer
 			   		</span>
 							<br/>
-							Xi'an research institue<br/>
+							Xi'an research institute<br/>
 							<a href="http://www.orbbec.com.cn" target="_blank" rel="nofollow">Orbbec Group</a>
 							<div style="padding-bottom: 30px;" ></div>
 							Email: chayfung@hotmail.com<br/>
