--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			   			Algorithm Engineer
 			   		</span>
 							<br/>
-							Xi'an research institute<br/>
+							Xi'an Research Institute<br/>
 							<a href="http://www.orbbec.com.cn" target="_blank" rel="nofollow">Orbbec Group</a>
 							<div style="padding-bottom: 30px;" ></div>
 							Email: chayfung@hotmail.com<br/>
