--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
 						<a href="index.html">
 							<li class="current">
 
-								HOME
+								Home
 
 							</li>
 						</a>
 						<a href="publications.html">
 							<li>
 
-								PUBLICATIONS
+								Publications
 
 							</li>
 						</a>
 						<a href="resume.html">
 							<li>
 
-								RESUME
+								Resume
 
 							</li>
 						</a>
 						<a href="contact.html">
 							<li>
 
-								CONTACT
+								Contact
 
 							</li>
 						</a>
