--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			  </h1>
 
 					<div class="layout-content resume-color">
-						<img src="images/index/portrait-h172.png" />
+						<img src="images/index/feng.jpg" />
 						<div class="layout-content-right">
 							<span class="font-min">
 			   			Algorithm Engineer
