--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!-- insert the bio block -->
    <div id = "bio">
 	<div class = "bio_img">
-		<img src="images/index/portrait-h172.png"/> 
+		<img src="images/index/feng.jpg"/> 
 	<div class = "bio_intro">
 		<h1>Chao Feng (冯超, in Chinese)</h1>
 	   
