--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 	</div>   
    </div>
 					
-<!--
+
    <div class="subheading">About</div>
+<!--
 	<p class="verbalContent resume-color">
 	I was a postdoctoral fellow working with Prof. 
 	<a href="http://peterwonka.net/" target="_blank" rel="nofollow">Peter Wonka </a> at the Visual Computing Center, 
@@ -108,15 +109,18 @@
 	<span style="display: inline-block; padding-top: 25px;padding-bottom: 50px;" class="verbalContent resume-color">
 	My research interests are in the area of computer graphics and computer vision.
 	</span>
-	<span class="footer">
-	<div style="padding-top: 10px; padding-bottom: 10px;border-top: #ebebeb solid 1px;">© 2011-2021 All Rights Reserved. | Last updated: 2021-03-24 14:00.</div>
-	<a href="https://www.linkedin.com/in/lubin-fan-64875a67/" ><img src="images/icons/linkedin.png"  /></a>
-	<a href="https://scholar.google.com/" style="margin-left: 10px;" ><img src="images/icons/scholar.png"  /></a>
-	<a href="https://github.com/lubinfan" style="margin-left: 10px;" ><img src="images/icons/github.png"  /></a>
-	<a href="https://www.youtube.com/user/lubinfan/" style="margin-left: 10px;" ><img src="images/icons/youtube.png"  /></a>
-	</span>
-   </div>
+
 -->
+	<span class="footer">
+	<div style="padding-top: 10px; padding-bottom: 10px;border-top: #ebebeb solid 1px;">© 2011-2021 All Rights Reserved. | Last updated: 2021-03-24 14:00.
+	</div>
+		<a href="https://www.linkedin.com/in/lubin-fan-64875a67/" ><img src="images/icons/linkedin.png"  /></a>
+		<a href="https://scholar.google.com/" style="margin-left: 10px;" ><img src="images/icons/scholar.png"  /></a>
+		<a href="https://github.com/lubinfan" style="margin-left: 10px;" ><img src="images/icons/github.png"  /></a>
+		<a href="https://www.youtube.com/user/lubinfan/" style="margin-left: 10px;" ><img src="images/icons/youtube.png"  /></a>
+	</span>
+     </div>
+
 
 </div>
 </div>
