--- a/index.html
+++ b/index.html
@@ -113,10 +113,19 @@
 	<span class="footer">
 	<div style="padding-top: 10px; padding-bottom: 10px;border-top: #ebebeb solid 1px;">© 2011-2021 All Rights Reserved. | Last updated: 2021-03-24 14:00.
 	</div>
+		<!--
 		<a href="https://www.linkedin.com/in/lubin-fan-64875a67/" ><img src="images/icons/linkedin.png"  /></a>
+		-->
+		
+		<!--
 		<a href="https://scholar.google.com/" style="margin-left: 10px;" ><img src="images/icons/scholar.png"  /></a>
-		<a href="https://github.com/lubinfan" style="margin-left: 10px;" ><img src="images/icons/github.png"  /></a>
+		-->
+		
+		<a href="https://github.com/choyfung" style="margin-left: 10px;" ><img src="images/icons/github.png"  /></a>
+		
+		<!--
 		<a href="https://www.youtube.com/user/lubinfan/" style="margin-left: 10px;" ><img src="images/icons/youtube.png"  /></a>
+		-->
 	</span>
 <!--				
      </div>
