--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 	</div>   
    </div>
 					
+
+   <div class="subheading"> </div>
 <!--
-   <div class="subheading">About</div>
 	<p class="verbalContent resume-color">
 	I was a postdoctoral fellow working with Prof. 
 	<a href="http://peterwonka.net/" target="_blank" rel="nofollow">Peter Wonka </a> at the Visual Computing Center, 
@@ -126,10 +127,8 @@
 		<!--
 		<a href="https://www.youtube.com/user/lubinfan/" style="margin-left: 10px;" ><img src="images/icons/youtube.png"  /></a>
 		-->
-	</span>
-<!--				
+	</span>				
      </div>
--->
 
 
 </div>
