--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
      </div>
 
 
-</div>
-</div>
-	</body>
+    </div> <!-- class = "box" -->
+</div> <!-- class= "headline" -->
+	
+</body>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 <!--http://localhost/-->
 </html>
