--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="box">
 			<div class="headline">
-				<a href="#">Lubin Fan's Homepage</a>
+				<a href="#">Chao Feng's Homepage</a>
 			</div>
 			<!--导航-->
 			<div class="container">
@@ -21,28 +21,28 @@
 						<a href="index.html">
 							<li>
 
-								HOME
+								Home
 
 							</li>
 						</a>
 						<a href="publications.html">
 							<li class="current">
 
-								PUBLICATIONS
+								Publications
 
 							</li>
 						</a>
 						<a href="resume.html">
 							<li>
 
-								RESUME
+								Resume
 
 							</li>
 						</a>
 						<a href="contact.html">
 							<li>
 
-								CONTACT
+								Contact
 
 							</li>
 						</a>
