--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@
 
                         
 						<div class="pub">
-          					<img src="images/pub/messitup.jpg"/>
+          					<img src="images/publications/contents/2020-tvcg-decorin-thumb.png"/>
           					<div class="pub-text">
 	            				<h2> Paper title <a href="projects/ise_siga16.pdf">[PDF]</a>
 									<a href="https://maruitx.github.io/project/ise/">[Project]</a>
