--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,10 @@
 	              				<a href="https://choyfung.github.io/chaayfung.github.io/">Chao Feng</a>,
 	              				<b>Jin Liang</b>, Maodong Ren, Gen Qiao, Wang Lu, Shifan Liu   
 	            				</p>
-	            				<h3>Applied Sciences (2020)</h3>  
+	            				<h3>Applied Sciences (2020)</h3> 
+	            				<h2> <a href="projects/ise_siga16.pdf">[PDF]</a>
+									 <a href="https://maruitx.github.io/project/ise/">[Project]</a>
+								</h2>  
           					</div>
         				</div>
 
