--- a/publications.html
+++ b/publications.html
@@ -64,16 +64,15 @@
 						<div class="pub">
           					<img src="images/publications/contents/2020-tvcg-decorin-thumb.png"/>
           					<div class="pub-text">
-	            				<h2> A Fast Hole-Filling Method for Triangular Mesh in Additive Repair <a href="projects/ise_siga16.pdf">[PDF]</a>
-									<a href="https://maruitx.github.io/project/ise/">[Project]</a>
+	            				<h2> A Fast Hole-Filling Method for Triangular Mesh in Additive Repair 
 								</h2> 
 	            				<p>
 	              				<a href="https://choyfung.github.io/chaayfung.github.io/">Chao Feng</a>,
 	              				<b>Jin Liang</b>, Maodong Ren, Gen Qiao, Wang Lu, Shifan Liu   
 	            				</p>
 	            				<h3>Applied Sciences (2020)</h3> 
-	            				<h2> “ ” <a href="projects/ise_siga16.pdf">[PDF]</a>
-									 <a href="https://maruitx.github.io/project/ise/">[Project]</a>
+	            				<h2><a href="projects/ise_siga16.pdf">[PDF]</a>
+									<a href="https://maruitx.github.io/project/ise/">[Project]</a>
 								</h2>  
           					</div>
         				</div>
