--- a/publications.html
+++ b/publications.html
@@ -78,6 +78,23 @@
         				</div>
 
 
+        				<div class="pub">
+          					<img src="images/publications/contents/2020-holeFilling-appliedSciences.png"/>
+          					<div class="pub-text">
+	            				<h2> Repair volume extraction method for damaged parts in remanufacturing repair 
+								</h2> 
+	            				<p>
+	              				<a href="https://choyfung.github.io/chaayfung.github.io/">Chao Feng</a>,
+	              				<b>Jin Liang</b>, Wenyan Pai, Shifan Liu   
+	            				</p>
+	            				<h3>The International Journal of Advanced Manufacturing Technology volume (2018)</h3> 
+	            				<h2><a href="projects/ise_siga16.pdf">[PDF]</a>
+									<a href="https://maruitx.github.io/project/ise/">[Project]</a>
+								</h2>  
+          					</div>
+        				</div>
+
+
 
                         <div class="list-right fa-left">
 							<img src="images/publications/contents/2020-tvcg-decorin-thumb.png" class="fa-left" />
