--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@
           					</div>
         				</div>
 
-						<h1> 2018 </h1>
+					<h1> 2018 </h1>
 
         				<div class="pub">
           					<img src="images/publications/contents/2018-repairExtraction-amt.png"/>
@@ -315,7 +315,26 @@
 					</div>
 
 					-->
-					
+
+					<h1> Other publications </h1>
+
+						<div class="pub">
+          					<img src="images/publications/contents/2018-repairExtraction-amt.png"/>
+          					<div class="pub-text">
+	            				<h2> Measurement on 3D full-field deformation of cylindrical workpieces weldingr 
+								</h2> 
+	            				<p>
+	              				<a href="https://choyfung.github.io/chaayfung.github.io/">Chao Feng</a>,
+	              				<b>Jin Liang</b>, Wenyan Pai, Chunyuan Gong, XiaoGuang Wang   
+	            				</p>
+	            				<h3>Journal of Central South University（Science and Technology) (2017)</h3> 
+	            				<h2><a href="projects/ise_siga16.pdf">[PDF]</a>
+									<a href="https://maruitx.github.io/project/ise/">[Project]</a>
+								</h2>  
+          					</div>
+        				</div>
+
+
 
 					<div class="footer-cont">
 						<div class="footer-title">Other Publications </div>
@@ -333,6 +352,7 @@
 							Diploma Thesis, School of Mathematics and Statistics, Wuhan University, June 2009
 						</div>
 					</div>
+
 
 				</div>
 			</div>
