--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
 				   
 				<!-- insert each news -->
 				<ul class = "news">
+
+					<li style="margin: 10px 0px 10px -15px"> 
+					<span style="color:#EE2C2C">[New]</span>
+					<b>Feb. 28, 2021</b>: I defend my doctoral thesis. 
+					</li>
 					
 					<li style="margin: 10px 0px 10px -15px"> 
 					<span style="color:#EE2C2C">[New]</span>
