--- a/index.html
+++ b/index.html
@@ -109,16 +109,23 @@
 
 					<li style="margin: 10px 0px 10px 0px"> 
 					<span style="color:#EE2C2C">[New]</span>
+					<b>Mar. 26, 2021</b>: I joined <a href="http://www.umiacs.umd.edu"> Orbbec</a>,and will lead a group to work on Computer Graphics. 
+					</li>
+
+					<li style="margin: 10px 0px 10px 0px"> 
+					<span style="color:#EE2C2C">[New]</span>
 					<b>Feb. 28, 2021</b>: I defend my doctoral thesis. 
+					</li>
+
+					<li style="margin: 10px 0px 10px 0px"> 
+					<b>Oct. 10, 2018</b>: I complete my visiting scholar's program at the <a href="http://www.umd.edu"> UMD </a> for one year, and back to China from Maryland in the U.S. 
 					</li>
 					
 					<li style="margin: 10px 0px 10px 0px"> 
-					<span style="color:#EE2C2C">[New]</span>
 					<b>Oct. 15, 2017</b>: I will focus on the 3D Tree modeling from Terrestrial Laser Scanning (TLS) point clouds at the <a href="http://www.umiacs.umd.edu">UMIACS</a> during my research program. 
 					</li>
 					
 					<li style="margin: 10px 0px 10px 0px"> 
-					<span style="color:#EE2C2C">[New]</span>
 					<b>May. 6, 2017</b>: Congratulation. I have received a scholarship sponsored by the <a href="http://www.csc.edu.cn">China Scholarship Council (CSC)</a> 
 					to start a research program at the University of Maryland, College Park for one year. 
 					</li>
@@ -144,7 +151,7 @@
 
 -->
 	<span class="footer">
-	<div style="padding-top: 10px; padding-bottom: 10px;border-top: #ebebeb solid 1px;">© 2011-2021 All Rights Reserved. | Last updated: 2021-04-02 12:00.
+	<div style="padding-top: 10px; padding-bottom: 10px;border-top: #ebebeb solid 1px;">© 2011-2021 All Rights Reserved. | Last updated: 2021-04-12 12:00.
 	</div>
 		<!--
 		<a href="https://www.linkedin.com/in/lubin-fan-64875a67/" ><img src="images/icons/linkedin.png"  /></a>
