--- a/index.html
+++ b/index.html
@@ -107,25 +107,25 @@
 				<!-- insert each news -->
 				<ul class = "news">
 
-					<li style="margin: 10px 0px 10px 0px"> 
+					<li style="margin: 10px 0px 10px 10px"> 
 					<span style="color:#EE2C2C">[New]</span>
-					<b>Mar. 26, 2021</b>: I joined <a href="http://www.umiacs.umd.edu"> Orbbec</a>,and will lead a group to work on Computer Graphics. 
+					<b>Mar. 26, 2021</b>: I joined <a href="http://www.umiacs.umd.edu"> Orbbec</a> and will lead a group to work on Computer Graphics. 
 					</li>
 
-					<li style="margin: 10px 0px 10px 0px"> 
+					<li style="margin: 10px 0px 10px 10px"> 
 					<span style="color:#EE2C2C">[New]</span>
-					<b>Feb. 28, 2021</b>: I defend my doctoral thesis. 
+					<b>Feb. 28, 2021</b>: I defend my doctoral thesis，and thanks for my supervsor <a href="http://gr.xjtu.edu.cn/web/liangjin/1">Prof. Jin Liang</a>. 
 					</li>
 
-					<li style="margin: 10px 0px 10px 0px"> 
+					<li style="margin: 10px 0px 10px 10px"> 
 					<b>Oct. 10, 2018</b>: I complete my visiting scholar's program at the <a href="http://www.umd.edu"> UMD </a> for one year, and back to China from Maryland in the U.S. 
 					</li>
 					
-					<li style="margin: 10px 0px 10px 0px"> 
+					<li style="margin: 10px 0px 10px 10px"> 
 					<b>Oct. 15, 2017</b>: I will focus on the 3D Tree modeling from Terrestrial Laser Scanning (TLS) point clouds at the <a href="http://www.umiacs.umd.edu">UMIACS</a> during my research program. 
 					</li>
 					
-					<li style="margin: 10px 0px 10px 0px"> 
+					<li style="margin: 10px 0px 10px 10px"> 
 					<b>May. 6, 2017</b>: Congratulation. I have received a scholarship sponsored by the <a href="http://www.csc.edu.cn">China Scholarship Council (CSC)</a> 
 					to start a research program at the University of Maryland, College Park for one year. 
 					</li>
