--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					</li>
 
 					<li style="margin: 10px 0px 10px 10px"> 
-					<b>Oct. 10, 2018</b>: I complete my visiting scholar's program at the <a href="http://www.umd.edu"> UMD </a> for one year, and back to China from Maryland in the U.S. 
+					<b>Oct. 10, 2018</b>: I complete my visiting scholar's program at the <a href="http://www.umd.edu"> UMD </a> for one year, and back to China. 
 					</li>
 					
 					<li style="margin: 10px 0px 10px 10px"> 
