--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					</li>
 					
 					<li style="margin: 10px 0px 10px 10px"> 
-					<b>Oct. 15, 2017</b>: I will focus on the 3D Tree modeling from Terrestrial Laser Scanning (TLS) point clouds at the <a href="http://www.umiacs.umd.edu">UMIACS</a> during my research program. 
+					<b>Oct. 15, 2017</b>: I will focus on the 3D Tree modeling from Terrestrial Laser Scanning (TLS) point clouds at the <a href="http://www.umiacs.umd.edu">UMIACS</a>. 
 					</li>
 					
 					<li style="margin: 10px 0px 10px 10px"> 
