--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 		</p>
 	   
 		<p>
-		My research focuses on computer graphics with special interests in point cloud processing, polygon mesh processing, 3D human body scanning, as well as 3D optial reconstruction. 
-		My research profiles can be found at both <a href="https://scholar.google.com/">Google Scholar</a>.
+		My research focuses on computer graphics with special interests in point cloud processing, polygon mesh processing, 3D automatic scanning, 3D human body scanning, as well as 3D optial reconstruction. 
+		My research profiles can be found at both <a href="https://github.com/choyfung">Github</a>.
         	</p>
 		
 		<h4>Email: chayfung@hotmail.com</h4>
