--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</p>
 	   
 		<p>
-		My research focuses on computer graphics with special interests in point cloud processing, polygon mesh processing, 3D automatic scanning, 3D human body scanning, as well as 3D optial reconstruction. 
+		My research interests include Computer Graphics, Geometric Modeling, especially in 3D point cloud processing, polygon mesh processing, 3D automatic scanning, 3D human body scanning, as well as 3D optial reconstruction. 
 		My research profiles can be found at both <a href="https://github.com/choyfung">Github</a>.
         	</p>
 		
@@ -114,7 +114,7 @@
 
 					<li style="margin: 10px 0px 10px 30px"> 
 					<span style="color:#EE2C2C">[New]</span>
-					<b>Feb. 28, 2021</b>: I defend my doctoral thesis，and thanks for my supervsor <a href="http://gr.xjtu.edu.cn/web/liangjin/1">Prof. Jin Liang</a>. 
+					<b>Feb. 28, 2021</b>: I defend my doctoral thesis，and thanks for my adviser <a href="http://gr.xjtu.edu.cn/web/liangjin/1">Prof. Jin Liang</a>. 
 					</li>
 
 					<li style="margin: 10px 0px 10px 30px"> 
