--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 					<li style="margin: 10px 0px 10px 30px"> 
 					<span style="color:#EE2C2C">[New]</span>
-					<b>Mar. 26, 2021</b>: I have joined <a href="http://www.umiacs.umd.edu"> Orbbec</a> and will lead a group to work on Computer Graphics. 
+					<b>Mar. 26, 2021</b>: I have joined <a href="http://www.orbbec.com.cn"> Orbbec</a> and will lead a group to work on Computer Graphics. 
 					</li>
 
 					<li style="margin: 10px 0px 10px 30px"> 
