--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	   
 		<p>
 		My research interests include Computer Graphics, Geometric Modeling, especially in 3D point cloud processing, polygon mesh processing, 3D automatic scanning, 3D human body scanning, as well as 3D optical reconstruction. 
-		My research profiles can be found at both <a href="https://github.com/choyfung">Github</a>.
+		My research can be found at <a href="https://github.com/choyfung">Github</a>.
         	</p>
 		
 		<h4>Email: chayfung@hotmail.com</h4>
