--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 					<li style="margin: 10px 0px 10px 30px"> 
 					<span style="color:#EE2C2C">[New]</span>
-					<b>Feb. 28, 2021</b>: I defend my doctoral thesis，and thanks for my adviser <a href="http://gr.xjtu.edu.cn/web/liangjin/1">Prof. Jin Liang</a>. 
+					<b>Feb. 28, 2021</b>: I defend my doctoral thesis，and many thanks for my adviser <a href="http://gr.xjtu.edu.cn/web/liangjin/1">Prof. Jin Liang</a>. 
 					</li>
 
 					<li style="margin: 10px 0px 10px 30px"> 
