--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content=" IE=9;IE=8;IE=7;IE=EDGE">
-		<title>Lubin Fan's Contact</title>
+		<title>Chao Feng's Contact</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" href="css/home.css" />
 	</head>
@@ -12,7 +12,7 @@
 	<body>
 		<div class="box">
 			<div class="headline">
-				<a href="#">Lubin Fan's Homepage</a>
+				<a href="#">Chao Feng's Homepage</a>
 			</div>
 			<!--导航-->
 			<div class="container">
@@ -21,28 +21,28 @@
 						<a href="index.html">
 							<li>
 
-								HOME
+								Home
 
 							</li>
 						</a>
 						<a href="publications.html">
 							<li>
 
-								PUBLICATIONS
+								Publications
 
 							</li>
 						</a>
 						<a href="resume.html">
 							<li>
 
-								RESUME
+								Resume
 
 							</li>
 						</a>
 						<a href="contact.html">
 							<li class="current">
 
-								CONTACT
+								Contact
 
 							</li>
 						</a>
@@ -77,7 +77,7 @@
 								</font>
 							</div>
 							<div class="contact-right fa-left">
-								lubinfan -a-t- gmail -d-o-t- com
+								chayfung@hotmail.com
 							</div>
 						</div>
 						</div>
