--- a/contact.html
+++ b/contact.html
@@ -64,10 +64,12 @@
 								</font>
 							</div>
 							<div class="contact-right fa-left">
-								Post office, Building 8</br>
-								No. 969, Wenyi Rd. (West)</br>
-								Yuhang District, Hangzhou, Zhejiang, 311121</br>
+
+								11F, Yun Hui Gu C2 Building, No.156</br>
+								The 8th Tiangu Road, Software Town</br> 
+								Hi-tech Zone, Xi'an, Shaanxi</br>
 								P. R. China</br>
+
 							</div>
 						</div>
 						<div class="resume-cont contact-cont">
